Ajuste na decodificaçao da imagem com os dados do cirurgiao e outros